force-app/main/default/objects/Test_Script__c/Test_Script__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents an executable script for a specific test scenario.</description>
    <label>Test Script</label>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>