force-app/main/default/objects/Test_Script__c/fields/Environment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Environment_Detail__c</fullName>
    <description>Environment Details for Test Script</description>
    <label>Environment Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>