force-app/main/default/objects/Test_Script__c/fields/Execution_Steps__c.field-meta.xml
<CustomField>
    <fullName>Execution_Steps__c</fullName>
    <description>Execution steps for the test script</description>
    <label>Execution Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>