force-app/main/default/objects/Test_Script__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Release of the test script</description>
    <formula>Test_Scenario__r.Release__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release</label>
    <type>Text</type>
</CustomField>