force-app/main/default/objects/Test_Script__c/fields/Test_Script_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Name__c</fullName>
    <label>Test Script Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>