force-app/main/default/objects/Test_Script__c/fields/Test_Script_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Status__c</fullName>
    <label>Test Script Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>