force-app/main/default/objects/Test_Script__c/fields/User_Login_Details__c.field-meta.xml
<CustomField>
    <fullName>User_Login_Details__c</fullName>
    <description>Added a field for User Details where login information will be added</description>
    <label>User Login Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>