force-app/main/default/objects/Test_Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Environment_Detail__c</columns>
    <columns>Description__c</columns>
    <columns>Request__c</columns>
    <columns>Execution_Type__c</columns>
    <columns>Test_Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>